@@ -3,7 +3,7 @@
 // Purpose:     wxRichToolTipGenericImpl declaration.
 // Author:      Vadim Zeitlin
 // Created:     2011-10-18
-// RCS-ID:      $Id: wxhead.h,v 1.12 2010-04-22 12:44:51 zeitlin Exp $
+// RCS-ID:      $Id$
 // Copyright:   (c) 2011 Vadim Zeitlin <vadim@wxwidgets.org>
 // Licence:     wxWindows licence
 ///////////////////////////////////////////////////////////////////////////////
@@ -30,13 +30,15 @@ public:
         // This is pretty arbitrary, we could follow MSW and use some multiple
         // of double-click time here.
         m_timeout = 5000;
+        m_delay = 0;
     }
 
     virtual void SetBackgroundColour(const wxColour& col,
                                      const wxColour& colEnd);
     virtual void SetCustomIcon(const wxIcon& icon);
     virtual void SetStandardIcon(int icon);
-    virtual void SetTimeout(unsigned milliseconds);
+    virtual void SetTimeout(unsigned milliseconds,
+                            unsigned millisecondsDelay = 0);
     virtual void SetTipKind(wxTipKind tipKind);
     virtual void SetTitleFont(const wxFont& font);
 
@@ -52,7 +54,8 @@ private:
     wxColour m_colStart,
              m_colEnd;
 
-    unsigned m_timeout;
+    unsigned m_timeout,
+             m_delay;
 
     wxTipKind m_tipKind;
 
